# todocol

./: .gitignore  Cargo.toml  README.md  TODO.md  TODO.txt  install.sh  rustfmt.toml  settings.json
src/: app.rs  app_core.rs  lib.rs  macros.rs  main.rs  todocol_app.rs
src/collector/: comment.rs  fileformat.rs  mod.rs  project.rs  source_file.rs  todofile.rs
src/collector/outfile/: workspace.rs
